--- a/GitTest.UI.MVC/GitTest.UI.MVC.csproj
+++ b/GitTest.UI.MVC/GitTest.UI.MVC.csproj
@@ -193,6 +193,54 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="_Archive\assets\bootstrap\css\bootstrap.css" />
+    <Content Include="_Archive\assets\bootstrap\css\bootstrap.min.css" />
+    <Content Include="_Archive\assets\bootstrap\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="_Archive\assets\bootstrap\js\bootstrap.js" />
+    <Content Include="_Archive\assets\bootstrap\js\bootstrap.min.js" />
+    <Content Include="_Archive\assets\bootstrap\js\npm.js" />
+    <Content Include="_Archive\assets\css\animate.css" />
+    <Content Include="_Archive\assets\css\plugins.css" />
+    <Content Include="_Archive\assets\font-awesome\css\font-awesome.css" />
+    <Content Include="_Archive\assets\font-awesome\css\font-awesome.min.css" />
+    <Content Include="_Archive\assets\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="_Archive\assets\images\band-member-1.jpg" />
+    <Content Include="_Archive\assets\images\band-member-2.jpg" />
+    <Content Include="_Archive\assets\images\band-member-3.jpg" />
+    <Content Include="_Archive\assets\images\contact-bg.jpg" />
+    <Content Include="_Archive\assets\images\cover-1.jpeg" />
+    <Content Include="_Archive\assets\images\cover-2.jpg" />
+    <Content Include="_Archive\assets\images\cover-3.jpeg" />
+    <Content Include="_Archive\assets\images\cover-4.jpg" />
+    <Content Include="_Archive\assets\images\gallery-1.jpg" />
+    <Content Include="_Archive\assets\images\gallery-2.jpg" />
+    <Content Include="_Archive\assets\images\gallery-3.jpg" />
+    <Content Include="_Archive\assets\images\gallery-4.jpg" />
+    <Content Include="_Archive\assets\images\gallery-5.jpg" />
+    <Content Include="_Archive\assets\images\gallery-6.jpg" />
+    <Content Include="_Archive\assets\images\hero-bg.jpeg" />
+    <Content Include="_Archive\assets\images\hero-bg.jpg" />
+    <Content Include="_Archive\assets\images\loading.gif" />
+    <Content Include="_Archive\assets\images\logo-light.png" />
+    <Content Include="_Archive\assets\images\logo.png" />
+    <Content Include="_Archive\assets\images\logo1.png" />
+    <Content Include="_Archive\assets\images\logo2.png" />
+    <Content Include="_Archive\assets\images\logo3.png" />
+    <Content Include="_Archive\assets\images\logo4.png" />
+    <Content Include="_Archive\assets\images\logo5.png" />
+    <Content Include="_Archive\assets\images\logo6.png" />
+    <Content Include="_Archive\assets\images\section-bg-2.jpg" />
+    <Content Include="_Archive\assets\images\section-bg-3.jpg" />
+    <Content Include="_Archive\assets\js\bigvideo.js" />
+    <Content Include="_Archive\assets\js\init.js" />
+    <Content Include="_Archive\assets\js\jquery.min.js" />
+    <Content Include="_Archive\assets\js\plugins.js" />
+    <Content Include="_Archive\demo-selector.html" />
+    <Content Include="_Archive\index-side-navigation.html" />
+    <Content Include="_Archive\index-slideshow-side-navigation.html" />
+    <Content Include="_Archive\index-slideshow.html" />
+    <Content Include="_Archive\index.html" />
+    <Content Include="_Archive\style.css" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -251,6 +299,16 @@
     <Content Include="Views\RolesAdmin\Delete.cshtml" />
     <Content Include="Views\RolesAdmin\Create.cshtml" />
     <Content Include="Views\Account\DisplayEmail.cshtml" />
+    <Content Include="_Archive\assets\bootstrap\css\bootstrap.css.map" />
+    <Content Include="_Archive\assets\bootstrap\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="_Archive\assets\bootstrap\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="_Archive\assets\bootstrap\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="_Archive\assets\bootstrap\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="_Archive\assets\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="_Archive\assets\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="_Archive\assets\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="_Archive\assets\font-awesome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="_Archive\assets\font-awesome\fonts\FontAwesome.otf" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
